edición del archivo html y del js

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
               <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
-                    <span class="sr-only">Title</span>
-                    <img class="h-8 w-auto sm:h-10" src="assets/img/306277.svg">
+                    <span class="sr-only"></span>
+                    <img class="h-10 w-auto sm:h-20" src="assets/img/logo.jpg">
                   </a>
                 </div>
               </div>
@@ -41,20 +41,19 @@
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Xia</span>
-              <span class="block text-indigo-600 xl:inline">@Xiaaix</span>
+              <span class="block xl:inline">Wave-to-earth</span>
+              <span class="block text-indigo-600 xl:inline">@땅에 손을 흔들다</span>
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              La perrita más bonita del mundo.
-              Con una cara de no saber nada y con el pelo color café con leche, la perrita más divertida y linda que podrás conocer ¡Xia! ❤  </p>
+              Wave to Earth es una banda de indie rock de Corea del Sur. La banda actualmente está formada por el vocalista y guitarrista Kim Daniel, el baterista Shin Donggyu y el bajista Cha Soonjong. Desde su formación en 2019, la banda ha lanzado 2 álbumes de estudio.</p>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="assets/img/xia.jpg" alt="">
+        src="assets/img/wave-to-earth.jpg" alt="">
     </div>
   </div>
   <div class="bg-white">
@@ -81,7 +80,7 @@
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
       <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
         <span class="block">Contact</span>
-        <span class="block text-indigo-600">keep in paw.</span>
+        <span class="block text-indigo-600">keep in touch.</span>
       </h2>
       <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0 0 48 48"
